--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Aerial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Portfolio by Md. Shakil Hossen</title>
@@ -24,8 +19,9 @@
 						<p>PHP Developer  &nbsp;&bull;&nbsp; 01840997216 &nbsp;&bull;&nbsp; Dhaka, Bangladesh</p>
 						<nav>
 							<ul>
-								<li><a href="https://www.facebook.com/shakil.hossen.585" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://github.com/Shakil148" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.linkedin.com/in/shakil-hossen-453406178/" class="icon brands fa fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.facebook.com/shakil.hossen.585" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="mailto:shakilpp148@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
@@ -33,7 +29,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; All right reserved <a href="http://html5up.net">Md. Shakil Hossen</a>.</span>
+						<span class="copyright">&copy; All right reserved <a href="https://shakil148.github.io/">Md. Shakil Hossen</a>.</span>
 					</footer>
 
 			</div>
