--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/shakil.hossen.585" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="live:shakilpp150" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://www.linkedin.com/in/shakil-hossen-453406178/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/shakil-hossen-453406178/" class="linkedin"><i
+              class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -196,7 +197,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">Laravel <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -204,7 +205,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Bootstrap <i class="val">70%</i></span>
+              <span class="skill">Codeigniter <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -212,23 +213,41 @@
             </div>
 
           </div>
-
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">90%</i></span>
+              <span class="skill">PHP <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">60%</i></span>
+              <span class="skill">JavaScript <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
+
+            <div class="progress">
+              <span class="skill">Css <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Bootstrap <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
           </div>
 
         </div>
@@ -414,10 +433,12 @@
             <div class="row">
               <div class="col-md-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Father's Name :</strong> <span>Md Belayet Hossen</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Father's Name :</strong> <span>Md Belayet
+                      Hossen</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Mother's Name :</strong> <span> Josna Begum</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>DDate of Birth:</strong> <span>October 1, 1995</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Date of Birth:</strong> <span>October 1, 1995</span>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Gender :</strong> <span>Male</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Marital Status :</strong> <span>Married</span>
@@ -427,11 +448,13 @@
               <div class="col-md-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Nationality:</strong> <span>Bangladeshi</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>National Id No:</strong> <span>19952621403000041</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>National Id No:</strong>
+                    <span>19952621403000041</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Religion :</strong> <span>Islam</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong> Present Address :</strong> <span>Bottola, khilkhet, Dhaka</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong> Present Address :</strong> <span>Bottola, khilkhet,
+                      Dhaka</span></li>
                 </ul>
               </div>
             </div>
