--- a/index.html
+++ b/index.html
@@ -207,33 +207,23 @@
             <div class="progress">
               <span class="skill">Codeigniter <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
-          </div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-
             <div class="progress">
-              <span class="skill">PHP <i class="val">100%</i></span>
+              <span class="skill">Css <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
           </div>
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">Css <i class="val">100%</i></span>
+              <span class="skill">PHP <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -243,10 +233,20 @@
             <div class="progress">
               <span class="skill">Bootstrap <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
+
+            <div class="progress">
+              <span class="skill">JavaScript <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
 
           </div>
 
@@ -372,7 +372,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-md-4 col-md-6 portfolio-item filter-app">
+          <div class="col-md-4 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -382,7 +382,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 col-md-6 portfolio-item filter-web">
+          <div class="col-md-4 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -393,7 +393,7 @@
             </div>
           </div>
 
-          <div class="col-md-4 col-md-6 portfolio-item filter-web">
+          <div class="col-md-4 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.avif" class="img-fluid" alt="">
               <div class="portfolio-links">
