--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelor of Science(BSc)</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h5>2014 - 2018</h5>
+              <p><em>IUBAT University, Dhaka, Bangladesh</em></p>
               <p>CGPA:3.34 out of 4</p>
               <p>4-month Internship, Academic courses, English communication skill, Proper grooming</p>
             </div>
